--- a/.env_defaults
+++ b/.env_defaults
@@ -7,4 +7,15 @@ LS_VERSION=5.0.0
 LS_HOME=/opt/logstash
 LS_USER=logstash
 LS_UID=997
-PLUGINS=""
+LS_PLUGINS=""
+
+# Kibana Runtime Arguments
+KB_CONF_MOUNT=/opt/kibana/config
+KB_EXT_VOL_NAME=
+
+# Kibana Build Arguments
+KB_VERSION=5.0.0-linux-x86_64
+KB_HOME=/opt/kibana
+KB_USER=kibana
+KB_UID=996
+KB_PLUGINS="x-pack"
