Added configuration editor image

--- a/.env_defaults
+++ b/.env_defaults
@@ -1,3 +1,7 @@
+COMPOSE_PROJECT_NAME=elkstack
+
+ES_UID=998
+ES_USER=elasticsearch
 # Logstash Runtime Arguments
 LS_CONF_MOUNT=/opt/logstash/config
 LS_EXT_VOL_NAME=
@@ -7,7 +11,7 @@ LS_VERSION=5.0.0
 LS_HOME=/opt/logstash
 LS_USER=logstash
 LS_UID=997
-LS_PLUGINS=""
+LS_PLUGINS=
 
 # Kibana Runtime Arguments
 KB_CONF_MOUNT=/opt/kibana/config
@@ -18,4 +22,4 @@ KB_VERSION=5.0.0-linux-x86_64
 KB_HOME=/opt/kibana
 KB_USER=kibana
 KB_UID=996
-KB_PLUGINS="x-pack"
+KB_PLUGINS=
