--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - "9200:9200"
     volumes:
       - es_data:/opt/elasticsearch/data
+      - es_config:/opt/elasticsearch/config
   logstash:
     build:
       context: ./alpine-logstash
@@ -24,40 +25,41 @@ services:
         LS_VERSION: 5.0.0
         LS_HOME: /opt/logstash
         LS_USER: logstash
-        LS_UID: ${LS_UID}
+        LS_UID: 997
         LS_PLUGINS:
         LS_XMX: -Xmx256m
         LS_XMS: -Xms256m
     command: logstash
     links:
       - elasticsearch
-    #ports:
-    #  - "514:514/udp"
+    ports:
+      - "12201:12201"
     volumes:
-      - ls_confd:${LS_HOME}/conf.d
-      - ls_config:${LS_HOME}/config
-    #environment:
-    #  LS_SETTINGS_DIR:
+      - ls_confd:/opt/logstash/conf.d
+      - ls_config:/opt/logstash/config
+    environment:
+      LS_SETTINGS_DIR: /opt/logstash/config
   kibana:
     build:
       context: ./alpine-kibana
       args:
-        KB_VERSION: ${KB_VERSION}
-        KB_HOME: ${KB_HOME}
-        KB_USER: ${KB_USER}
-        KB_UID: ${KB_UID}
-        PLUGINS: ${KB_PLUGINS}
+        KB_VERSION: 5.0.0-linux-x86_64
+        KB_HOME: /opt/kibana
+        KB_USER: kibana
+        KB_UID: 996
+        PLUGINS:
     command: kibana
     ports:
       - 5601:5601
     links:
       - elasticsearch
     volumes:
-      - kb_config:${KB_CONF_MOUNT}
+      - kb_config:/opt/kibana/config
     environment:
-      KB_SETTINGS_DIR: ${KB_CONF_MOUNT}
+      KB_SETTINGS_DIR: /opt/kibana/config
 volumes:
   es_data: {}
+  es_config: {}
   kb_config: {}
   ls_confd: {}
   ls_config: {}
